Add markdown config

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 pygments:    true
 permalink:   date
+markdown:    redcarpet
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript"]
