--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ permalink:   date
 markdown:    redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript"]
+url: http://garyrafferty.com
