--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ analytics:
 author:
   name    : "Gary Rafferty"
   avatar  : "/assets/images/avatar.png"
-  bio     : "I am an experienced software developer based in Dublin, Ireland."
+  bio     : "I build, lead, and motivate passionate and progressive cross-functional engineering teams that add value to business."
   location: "Dublin, Ireland"
   links:
     - label: "Twitter"
