--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title                    : "Gary Rafferty"
 title_separator          : "-"
 name                     : "Gary Rafferty"
 description              : "Thoughts and musings"
-url                      : "http://garyrafferty.com"
+url                      : "https://garyrafferty.com"
 repository               : "gary-rafferty/gary-rafferty.github.com"
 words_per_minute         : 200
 google_site_verification : 'AU2WGXIWwLDomeI45iRYfLSIjqRnrNJ3FWJqEQwsqxA'
