--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ analytics:
 # Site Author
 author:
   name    : "Gary Rafferty"
-  avatar  : "/assets/images/avatar.png"
+  avatar  : "/assets/images/avatar.jpeg"
   bio     : "I build, lead, and motivate passionate and progressive cross-functional engineering teams that add value to business."
   location: "Dublin, Ireland"
   links:
