--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ analytics:
 author:
   name    : "Gary Rafferty"
   avatar  : "/assets/images/avatar.jpeg"
-  bio     : "I build, lead, and motivate passionate and progressive cross-functional engineering teams that add value to business."
+  bio     : "I create and lead passionate and progressive engineering departments that add value to business. Deeply motivated in identifying and growing the engineering leaders of the future."
   location: "Dublin, Ireland"
   links:
     - label: "Twitter"
